better use o roi

--- a/model.ipynb
+++ b/model.ipynb
@@ -191,10 +191,189 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/abaraldo/Documents/GitHub/fastMRI/venv/lib/python3.10/site-packages/pytorch_lightning/callbacks/model_checkpoint.py:612: UserWarning: Checkpoint directory logs/unet/unet_roi/checkpoints exists and is not empty.\n",
+      "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n",
+      "\n",
+      "  | Name             | Type                 | Params\n",
+      "----------------------------------------------------------\n",
+      "0 | NMSE             | DistributedMetricSum | 0     \n",
+      "1 | SSIM             | DistributedMetricSum | 0     \n",
+      "2 | PSNR             | DistributedMetricSum | 0     \n",
+      "3 | ValLoss          | DistributedMetricSum | 0     \n",
+      "4 | TotExamples      | DistributedMetricSum | 0     \n",
+      "5 | TotSliceExamples | DistributedMetricSum | 0     \n",
+      "6 | unet             | Unet                 | 7.8 M \n",
+      "----------------------------------------------------------\n",
+      "7.8 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "7.8 M     Total params\n",
+      "31.024    Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: 100%|██████████| 41877/41877 [48:13<00:00, 14.47it/s, loss=0.473, v_num=15, validation_loss=0.392]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, global step 34742: 'validation_loss' reached 0.39212 (best 0.39212), saving model to 'logs/unet/unet_roi/checkpoints/epoch=0-step=34742-v1.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: 100%|██████████| 41877/41877 [48:50<00:00, 14.29it/s, loss=0.369, v_num=15, validation_loss=0.401] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, global step 69484: 'validation_loss' was not in top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2: 100%|██████████| 41877/41877 [48:52<00:00, 14.28it/s, loss=0.366, v_num=15, validation_loss=0.369] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, global step 104226: 'validation_loss' reached 0.36913 (best 0.36913), saving model to 'logs/unet/unet_roi/checkpoints/epoch=2-step=104226.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3: 100%|██████████| 41877/41877 [48:57<00:00, 14.26it/s, loss=0.318, v_num=15, validation_loss=0.368] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, global step 138968: 'validation_loss' reached 0.36751 (best 0.36751), saving model to 'logs/unet/unet_roi/checkpoints/epoch=3-step=138968.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4: 100%|██████████| 41877/41877 [48:53<00:00, 14.27it/s, loss=0.399, v_num=15, validation_loss=0.364] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4, global step 173710: 'validation_loss' reached 0.36416 (best 0.36416), saving model to 'logs/unet/unet_roi/checkpoints/epoch=4-step=173710.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5: 100%|██████████| 41877/41877 [48:52<00:00, 14.28it/s, loss=0.404, v_num=15, validation_loss=0.364] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, global step 208452: 'validation_loss' reached 0.36398 (best 0.36398), saving model to 'logs/unet/unet_roi/checkpoints/epoch=5-step=208452.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6: 100%|██████████| 41877/41877 [48:55<00:00, 14.27it/s, loss=0.459, v_num=15, validation_loss=0.363] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6, global step 243194: 'validation_loss' reached 0.36291 (best 0.36291), saving model to 'logs/unet/unet_roi/checkpoints/epoch=6-step=243194.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7: 100%|██████████| 41877/41877 [48:55<00:00, 14.27it/s, loss=0.34, v_num=15, validation_loss=0.362]  "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7, global step 277936: 'validation_loss' reached 0.36249 (best 0.36249), saving model to 'logs/unet/unet_roi/checkpoints/epoch=7-step=277936.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8: 100%|██████████| 41877/41877 [48:55<00:00, 14.26it/s, loss=0.351, v_num=15, validation_loss=0.362] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8, global step 312678: 'validation_loss' reached 0.36216 (best 0.36216), saving model to 'logs/unet/unet_roi/checkpoints/epoch=8-step=312678.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9: 100%|██████████| 41877/41877 [49:13<00:00, 14.18it/s, loss=0.264, v_num=15, validation_loss=0.361] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9, global step 347420: 'validation_loss' reached 0.36090 (best 0.36090), saving model to 'logs/unet/unet_roi/checkpoints/epoch=9-step=347420.ckpt' as top 1\n",
+      "`Trainer.fit` stopped: `max_epochs=10` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9: 100%|██████████| 41877/41877 [49:13<00:00, 14.18it/s, loss=0.264, v_num=15, validation_loss=0.361]\n"
+     ]
+    }
+   ],
    "source": [
     "trainer.fit(model, datamodule=data_module)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
