add train on roi data only

--- a/model.ipynb
+++ b/model.ipynb
@@ -36,19 +36,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Global seed set to 42\n",
-      "GPU available: True (mps), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
+      "Global seed set to 42\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "FastMriDataModule.__init__() got an unexpected keyword argument 'only_annotated'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 89\u001b[0m\n\u001b[1;32m     86\u001b[0m test_transform \u001b[38;5;241m=\u001b[39m T\u001b[38;5;241m.\u001b[39mUnetDataTransform(configs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mchallenge\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     88\u001b[0m \u001b[38;5;66;03m# create a data module\u001b[39;00m\n\u001b[0;32m---> 89\u001b[0m data_module \u001b[38;5;241m=\u001b[39m \u001b[43mFastMriDataModule\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     90\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdata_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfigs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata_path\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     91\u001b[0m \u001b[43m    \u001b[49m\u001b[43mchallenge\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfigs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mchallenge\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     92\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtrain_transform\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrain_transform\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     93\u001b[0m \u001b[43m    \u001b[49m\u001b[43mval_transform\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mval_transform\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     94\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtest_transform\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtest_transform\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     95\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtest_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     96\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfigs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbatch_size\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     97\u001b[0m \u001b[43m    \u001b[49m\u001b[43mnum_workers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     98\u001b[0m \u001b[43m    \u001b[49m\u001b[43monly_annotated\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mconfigs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43monly_annotated\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     99\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;66;03m# create a model\u001b[39;00m\n\u001b[1;32m    102\u001b[0m model \u001b[38;5;241m=\u001b[39m UnetModule(\n\u001b[1;32m    103\u001b[0m     in_chans\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124min_chans\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m    104\u001b[0m     out_chans\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mout_chans\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    115\u001b[0m     use_roi\u001b[38;5;241m=\u001b[39mconfigs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muse_roi\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m    116\u001b[0m )\n",
+      "\u001b[0;31mTypeError\u001b[0m: FastMriDataModule.__init__() got an unexpected keyword argument 'only_annotated'"
      ]
     }
    ],
    "source": [
     "path_config = pathlib.Path(\"fastmri_dirs.yaml\")\n",
     "\n",
-    "version_name = \"unet_attn\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
+    "version_name = \"unet_annot_only\" # one of \"unet\", \"unet_attn\", \"unet_ssim\", \"unet_attn_ssim\"\n",
     "\n",
+    "\n",
+    "only_annotated = False\n",
     "if version_name == \"unet\":\n",
     "    attn_layer = False\n",
     "    metric = \"l1\"\n",
@@ -73,8 +82,19 @@
     "    attn_layer = True\n",
     "    metric = \"ssim\"\n",
     "    use_roi = True\n",
+    "elif version_name == \"unet_annot_only\":\n",
+    "    attn_layer = False\n",
+    "    metric = \"l1\"\n",
+    "    use_roi = False\n",
+    "    only_annotated = True\n",
+    "elif version_name == \"unet_roi_annot_only\":\n",
+    "    attn_layer = False\n",
+    "    metric = \"l1\"\n",
+    "    use_roi = True\n",
+    "    only_annotated = True\n",
     "\n",
-    "version_name = f\"{version_name}_{metric}\" + (\"_roi\" if use_roi else \"\") + (\"_attn\" if attn_layer else \"\")\n",
+    "\n",
+    "version_name = f\"{version_name}_{metric}\" + (\"_roi\" if use_roi else \"\") + (\"_attn\" if attn_layer else \"\") + (\"_annot\" if only_annotated else \"\")\n",
     "\n",
     "\n",
     "configs = dict(\n",
@@ -104,6 +124,7 @@
     "    roi_weight=0.25,\n",
     "    attn_layer=attn_layer,\n",
     "    use_roi=use_roi,\n",
+    "    only_annotated=only_annotated\n",
     ")\n",
     "\n",
     "pl.seed_everything(42)\n",
@@ -128,6 +149,7 @@
     "    test_path=None,\n",
     "    batch_size=configs['batch_size'],\n",
     "    num_workers=10,\n",
+    "    only_annotated=configs['only_annotated']\n",
     ")\n",
     "\n",
     "# create a model\n",
@@ -223,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fa615cc6d734e18ae05ce94c626af25",
+       "model_id": "3a9a0e2092624e74a0fb39f51aa69cd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +259,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "923b3809cb12458cb2b9e8b475dc6736",
+       "model_id": "c8b903fec87247b19be48556916aa217",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,6 +269,92 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e029904aa304825a1e347b197ab7113",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, global step 34742: 'validation_loss' reached 0.31100 (best 0.31100), saving model to 'logs/unet/unet_attn_l1_attn/checkpoints/epoch=0-step=34742.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b65c63b8a8c4cc5931621faf6e3f468",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, global step 69484: 'validation_loss' reached 0.30960 (best 0.30960), saving model to 'logs/unet/unet_attn_l1_attn/checkpoints/epoch=1-step=69484.ckpt' as top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ad25dfb82be42f5a0d04093369327fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2, global step 104226: 'validation_loss' was not in top 1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c2bf95cfe6f40dfa6ef905a45493da9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validation: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3, global step 138968: 'validation_loss' reached 0.30938 (best 0.30938), saving model to 'logs/unet/unet_attn_l1_attn/checkpoints/epoch=3-step=138968.ckpt' as top 1\n",
+      "/Users/lsantos/Projects/fastMRI/.venv/lib/python3.10/site-packages/pytorch_lightning/trainer/call.py:48: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
+      "  rank_zero_warn(\"Detected KeyboardInterrupt, attempting graceful shutdown...\")\n"
+     ]
     }
    ],
    "source": [
@@ -255,17 +363,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "====================================================================================================\n",
+       "Layer (type:depth-idx)                             Output Shape              Param #\n",
+       "====================================================================================================\n",
+       "UnetModule                                         [1, 320, 320]             --\n",
+       "├─Unet: 1-1                                        [1, 1, 320, 320]          32,866\n",
+       "│    └─ModuleList: 2-7                             --                        (recursive)\n",
+       "│    │    └─ConvBlock: 3-1                         [1, 32, 320, 320]         9,504\n",
+       "│    └─ModuleList: 2-8                             --                        (recursive)\n",
+       "│    │    └─CBAM: 3-2                              [1, 32, 320, 320]         226\n",
+       "│    └─ModuleList: 2-7                             --                        (recursive)\n",
+       "│    │    └─ConvBlock: 3-3                         [1, 64, 160, 160]         55,296\n",
+       "│    └─ModuleList: 2-8                             --                        (recursive)\n",
+       "│    │    └─CBAM: 3-4                              [1, 64, 160, 160]         610\n",
+       "│    └─ModuleList: 2-7                             --                        (recursive)\n",
+       "│    │    └─ConvBlock: 3-5                         [1, 128, 80, 80]          221,184\n",
+       "│    └─ModuleList: 2-8                             --                        (recursive)\n",
+       "│    │    └─CBAM: 3-6                              [1, 128, 80, 80]          2,146\n",
+       "│    └─ModuleList: 2-7                             --                        (recursive)\n",
+       "│    │    └─ConvBlock: 3-7                         [1, 256, 40, 40]          884,736\n",
+       "│    └─ModuleList: 2-8                             --                        (recursive)\n",
+       "│    │    └─CBAM: 3-8                              [1, 256, 40, 40]          8,290\n",
+       "│    └─ConvBlock: 2-9                              [1, 512, 20, 20]          --\n",
+       "│    │    └─Sequential: 3-9                        [1, 512, 20, 20]          3,538,944\n",
+       "│    └─ModuleList: 2-19                            --                        (recursive)\n",
+       "│    │    └─TransposeConvBlock: 3-10               [1, 256, 40, 40]          524,288\n",
+       "│    └─ModuleList: 2-20                            --                        (recursive)\n",
+       "│    │    └─CBAM: 3-11                             [1, 512, 40, 40]          32,866\n",
+       "│    └─ModuleList: 2-21                            --                        (recursive)\n",
+       "│    │    └─ConvBlock: 3-12                        [1, 256, 40, 40]          1,769,472\n",
+       "│    └─ModuleList: 2-19                            --                        (recursive)\n",
+       "│    │    └─TransposeConvBlock: 3-13               [1, 128, 80, 80]          131,072\n",
+       "│    └─ModuleList: 2-20                            --                        (recursive)\n",
+       "│    │    └─CBAM: 3-14                             [1, 256, 80, 80]          8,290\n",
+       "│    └─ModuleList: 2-21                            --                        (recursive)\n",
+       "│    │    └─ConvBlock: 3-15                        [1, 128, 80, 80]          442,368\n",
+       "│    └─ModuleList: 2-19                            --                        (recursive)\n",
+       "│    │    └─TransposeConvBlock: 3-16               [1, 64, 160, 160]         32,768\n",
+       "│    └─ModuleList: 2-20                            --                        (recursive)\n",
+       "│    │    └─CBAM: 3-17                             [1, 128, 160, 160]        2,146\n",
+       "│    └─ModuleList: 2-21                            --                        (recursive)\n",
+       "│    │    └─ConvBlock: 3-18                        [1, 64, 160, 160]         110,592\n",
+       "│    └─ModuleList: 2-19                            --                        (recursive)\n",
+       "│    │    └─TransposeConvBlock: 3-19               [1, 32, 320, 320]         8,192\n",
+       "│    └─ModuleList: 2-20                            --                        (recursive)\n",
+       "│    │    └─CBAM: 3-20                             [1, 64, 320, 320]         610\n",
+       "│    └─ModuleList: 2-21                            --                        (recursive)\n",
+       "│    │    └─Sequential: 3-21                       [1, 1, 320, 320]          27,681\n",
+       "====================================================================================================\n",
+       "Total params: 7,844,147\n",
+       "Trainable params: 7,844,147\n",
+       "Non-trainable params: 0\n",
+       "Total mult-adds (G): 21.35\n",
+       "====================================================================================================\n",
+       "Input size (MB): 0.41\n",
+       "Forward/backward pass size (MB): 252.06\n",
+       "Params size (MB): 31.25\n",
+       "Estimated Total Size (MB): 283.71\n",
+       "===================================================================================================="
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from torchinfo import summary\n",
+    "summary(model, input_size=(1, 320, 320))"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "7844147 with attention\n",
+    "7756097 without attention"
+   ]
   },
   {
    "cell_type": "code",
@@ -3728,7 +3908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
